[gd_scene load_steps=16 format=3 uid="uid://cnjn2666uqjew"]

[ext_resource type="PackedScene" uid="uid://dymm5ga70wkbk" path="res://src/Game/Enemy/Enemy.tscn" id="1_6yiyt"]
[ext_resource type="Texture2D" uid="uid://b6a6gp38qdsg" path="res://assets/images/Game/stick_metal.png" id="2_0vewq"]
[ext_resource type="Script" uid="uid://hth35f0882ly" path="res://src/Game/Enemy/Duck/duck.gd" id="2_bqy7j"]
[ext_resource type="Texture2D" uid="uid://mrv36ts24frl" path="res://assets/images/Game/duck_back.png" id="3_rsiao"]
[ext_resource type="Texture2D" uid="uid://ddaxcp618a53s" path="res://assets/images/Game/duck_brown.png" id="4_bqy7j"]
[ext_resource type="Texture2D" uid="uid://cinbkab36wum4" path="res://assets/images/Game/duck_white.png" id="5_bo5up"]
[ext_resource type="Texture2D" uid="uid://dfqliumfu1toy" path="res://assets/images/Game/duck_yellow.png" id="6_1eaqx"]
[ext_resource type="AudioStream" uid="uid://ba1q61gajfy0n" path="res://assets/audio/SFX/duck.wav" id="8_bo5up"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6tdkd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rsiao")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_bqy7j")
}],
"loop": true,
"name": &"brown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bo5up")
}],
"loop": true,
"name": &"white",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1eaqx")
}],
"loop": true,
"name": &"yellow",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsiao"]
size = Vector2(144, 144)

[sub_resource type="Animation" id="Animation_bqy7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPivot/StickPivot/Stick:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainPivot/StickPivot/Stick/DuckPivot/Duck:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainPivot/StickPivot/Stick:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1eaqx"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPivot/StickPivot/Stick:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.03526, 0.108819),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_rsiao"]
resource_name = "shot"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPivot/StickPivot/Stick:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.3),
"transitions": PackedFloat32Array(1, 0.196146, 2.54912),
"update": 0,
"values": [0.0, 0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainPivot/StickPivot/Stick/DuckPivot/Duck:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bo5up"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPivot/StickPivot/Stick:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.03526, 0.217082),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tdkd"]
_data = {
&"RESET": SubResource("Animation_bqy7j"),
&"hide": SubResource("Animation_1eaqx"),
&"shot": SubResource("Animation_rsiao"),
&"show": SubResource("Animation_bo5up")
}

[node name="Duck" instance=ExtResource("1_6yiyt")]
y_sort_enabled = true
script = ExtResource("2_bqy7j")
type = 1

[node name="MainPivot" type="Node2D" parent="." index="0"]

[node name="StickPivot" type="Node2D" parent="MainPivot" index="0"]
position = Vector2(0, 96)

[node name="Stick" type="Sprite2D" parent="MainPivot/StickPivot" index="0"]
position = Vector2(0, 64)
texture = ExtResource("2_0vewq")
offset = Vector2(0, -64)

[node name="DuckPivot" type="Node2D" parent="MainPivot/StickPivot/Stick" index="0"]
position = Vector2(0, -156)

[node name="Duck" type="AnimatedSprite2D" parent="MainPivot/StickPivot/Stick/DuckPivot" index="0"]
sprite_frames = SubResource("SpriteFrames_6tdkd")
animation = &"brown"

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_rsiao")

[node name="VisibleOnScreenNotifier2D" parent="." index="2"]
position = Vector2(-3.57628e-06, 48)
scale = Vector2(5.6, 11.2)

[node name="CPUParticles2D" parent="." index="3"]
texture = ExtResource("4_bqy7j")
emission_sphere_radius = 1.0

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_6tdkd")
}

[node name="ShootSound" parent="." index="6"]
stream = ExtResource("8_bo5up")
